# uncertainty_propagation_surgical_robotics

./: .gitignore  PSEUDOCODE.md  README.md  TODO.md  pyproject.toml
ambf/: CHANGELOG.md  README.md
ambf/core/: CMakeLists.txt
ambf/core/ambf_framework/: afAttributes.h  afFramework.cpp  afFramework.h  afInputDevices.cpp  afPluginInterface.h  afSystem.cpp  afSystem.h
ambf/core/ambf_plugins/: CMakeLists.txt
ambf/examples/rope_with_anchor/: rope_with_anchor.yaml
ambf/ros_modules/ambf_client/: CMakeLists.txt  setup.py
ambf/ros_modules/ambf_msgs/: CMakeLists.txt
scripts/: branching_3d.html  demo_branching_correlation.py  demo_multipath_fusion.py  demo_open_chain.py  demo_shared_hub_fusion.py  multipath_3d.html  open_chain_3d.html  poster_figures.py  shared_hub_3d.html  validate_closed_loop_mc.py  validate_frame_to_point_mc.py  validate_multi_edge_corr_mc_branching.py  validate_multi_edge_corr_mc_chain.py  validate_open_chain_mc.py  validate_point_mc.py  validate_point_to_point_mc.py  validate_random_network_mc.py  validate_shared_infrastructure_mc.py
simulation/: ambf_bridge.py  gui.py  node_registry.py  simulate.py  uncertainty_system.py
src/uncertainty_networks/: __init__.py  closed_loop.py  examples.py  network.py  observations.py  se3.py  uncertain_geometry.py  visualization.py
tests/: test_batch_eval.py  test_closed_loop.py  test_network.py  test_network_closed_loop.py  test_network_corr_branching.py  test_network_corr_chain.py  test_network_corr_shared_infrastructure.py  test_observations.py  test_uncertain_transform.py
(+60 files in other folders)
