[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainty-networks"
version = "0.1.0"
description = "Simulation-based uncertainty propagation in geometric networks (SE(3))"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "X.M. Christine Zhu"}]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0", "matplotlib>=3.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"